Update Salt Player APKs and documentation

--- a/docs/音乐.md
+++ b/docs/音乐.md
@@ -13,7 +13,7 @@
 - 椒盐音乐 Lite：适用于老版本安卓
 - Salt Player-hmos：官方适配鸿蒙3.x-4.0
 - 椒盐音乐7.8：中间版本可养老
-- 青盐云听：椒盐音乐提供有偿云服务的版本
+- 青盐云听：椒盐音乐提供对接云服务(WebDAV和阿里云盘)，同时有本地音乐功能
 - 糖醋音乐：椒盐支持改包的版本，已停更
 #### 改包名版本
 - 椒盐音乐-hmos4 (Spotify包名)：适用于鸿蒙4.2-4.3（热心酷友基于糖醋音乐改包）
